--- a/src/style.css
+++ b/src/style.css
@@ -5,7 +5,23 @@
 }
 
 body {
-  margin-top: 100px;
+  margin-top: 3.5rem;
+  width: 100%;
+  font-family: "Roboto", sans-serif;
+  color: aliceblue;
+  background-color: black;
+}
+.con-first {
+  width: 100%;
+  height: 90vh;
+  margin-bottom: 1rem;
+}
+
+#home-me {
+  background-image: url(../images/me.jpg);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
 }
 
 h1,
@@ -30,6 +46,9 @@ h3 {
 p {
   font-size: 18px;
   line-height: 1.5;
+}
+a {
+  font-family: "Montserrat", sans-serif;
 }
 
 .navigation-links {
