--- a/src/style.css
+++ b/src/style.css
@@ -11,17 +11,33 @@ body {
   color: aliceblue;
   background-color: black;
 }
+
 .con-first {
   width: 100%;
   height: 90vh;
   margin-bottom: 1rem;
 }
 
-#home-me {
-  background-image: url(../images/me.jpg);
-  background-repeat: no-repeat;
+#home {
+  /* Use "linear-gradient" to add a darken background effect to the image (photographer.jpg). This will make the text easier to read */
+  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
+    url(../images/me.jpg);
+  /* Set a specific height */
+  height: 50%;
+  /* Position and center the image to scale nicely on all screens */
   background-position: center;
+  background-repeat: no-repeat;
   background-size: cover;
+  position: relative;
+}
+
+.hero-text {
+  text-align: center;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: white;
 }
 
 h1,
