--- a/src/style.css
+++ b/src/style.css
@@ -139,6 +139,18 @@ a {
   background-color: rgba(255, 255, 255, 0.5);
 }
 
+.sns {
+  border-radius: 100px;
+  height: 50px;
+  width: 50px;
+  text-decoration: none;
+  color: white;
+}
+
+.sns:hover {
+  background-color: rgba(255, 255, 255, 0.5);
+}
+
 @media (max-width: 576px) {
   h1 {
     font-size: 40px;
